alpine image updated to alpine 3.7 (WIP) and add ubuntu image and base tests on ubuntu image